--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,4 +1,5 @@
 .section-footer {
+    margin-top: 30px;
     display: grid;
     grid-template-columns: repeat(11, 1fr);
     grid-template-rows: 30% 80% 30%;
