--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background: #fafafa;
+    background: #FFF; /* #FAFAFA */
     font: 14px Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased !important;
 }
