--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,30 +1,185 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
 .section-footer {
     margin-top: 30px;
     display: grid;
     grid-template-columns: repeat(11, 1fr);
-    grid-template-rows: 30% 80% 30%;
+    /* grid-template-rows: 30% 70% 30% 30%; */
+    grid-template-rows: auto auto auto auto auto;
     grid-template-areas: 
         '. . . . ff ff ff . . . .'
+        '. hr hr hr hr hr hr hr hr hr .'
         '. . . . fs fs fs . . . .'
+        '. . . . form form . . . . .'
         '. . . . fm fm fm . . . .';
     grid-gap: 3px;
     text-align: center;
 }
 
-.follow-me {
+.contact-me {
     grid-area: ff;
+    width: 100%;
+    color: #00063D;
+    font-size: 20px;
+    /* margin-bottom: 20px; */
+    /* border: solid 1px red */
+}
+
+.hr {
+    grid-area: hr;
+    width: 100%;
+    border-bottom: solid 1px #00063D;
+    margin: 3px 0 20px;
 }
 
 .social-media {
     grid-area: fs;
     /* white-space: nowrap; */
+    /* border: solid 1px red */
+}
+
+.social-media .div-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-media .div-img .email {
+    cursor: pointer
 }
 
 .social-media img {
     margin: 0 10px 5px 10px;
+
+}
+
+form {
+    /* width: 100%; */
+    padding: 20px;
+    text-align: start;
+    overflow:hidden;
+    transition: max-height 1s ease-in-out;
+}
+
+
+form .row {
+    position: relative;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+form .row .col {
+    position: relative;
+    width: 100%; 
+    padding: 0 10px; 
+    margin: 30px 0 10px;
+    transition: 0.5s;
+}
+
+form .row .col .input-box {
+    position: relative; 
+    width: 100%; 
+    height: 40px;
+    color: #00063D;
+}
+
+form .row .col .input-box input,
+form .row .col .input-box.textarea textarea {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    box-shadow: none;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    padding: 0 10px;
+    z-index: 1;
+    color: #FFF
+}
+
+form .row .input-box .text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    line-height: 40px;
+    font-size: 18px;
+    padding: 0 10px;
+    display: block;
+    transition: 0.5s;
+    pointer-events: none;
+}
+
+form .row .input-box input:focus + .text,
+form .row .input-box input:valid + .text {
+    top: -35px;
+    left: -10px;
+}
+
+form .row .input-box .line {
+    position: absolute;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: #00063D;
+    transition: 0.5s;
+    border-radius: 2px;
+    pointer-events: none;
+}
+
+form .row .input-box input:focus ~ .line,
+form .row .input-box input:valid ~ .line {
+    height: 100%;
+}
+
+form .row .input-box.textarea {
+    position: relative;
+    width: 100%;
+    height: 100px;
+    padding: 10px 0;
+}
+
+form .row .input-box.textarea textarea {
+    height: 100%;
+    resize: none;
+}
+
+form .row .input-box textarea:focus + .text,
+form .row .input-box textarea:valid + .text {
+    top: -35px;
+    left: -10px;
+}
+
+form .row .input-box textarea:focus ~ .line,
+form .row .input-box textarea:valid ~ .line {
+    height: 100%;
+}
+
+input[type='submit'] {
+    border: none;
+    padding: 7px 35px;
+    cursor: pointer;
+    outline: none;
+    background: #00063D;
+    color: #FFF;
+    font-size: 18px;
+    border-radius: 2px;
+}
+
+.button-send {
+    text-align: center;
 }
 
 .message {
     grid-area: fm;
     align-items: center;
+    margin-bottom: 20px;
+    /* border: solid 1px red; */
 }
